<?xml version="1.0"?>

<package format="2">

  <name>dynamic_direct_lidar_odometry</name>
  <version>1.4.2</version>
  <description>Dynamic Direct LiDAR Odometry</description>

  <maintainer email="lichtenfeld@sim.tu-darmstadt.de">Jonathan Lichtenfeld</maintainer>

  <author>Jonathan Lichtenfeld</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dynamic_direct_lidar_odometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>jsk_recognition_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <export>
  </export>

</package>
