<?xml version="1.0"?>
<package format="2">
    <name>dynamic_direct_lidar_odometry_msgs</name>
    <version>1.0.0</version>
    <description>
        Service msgs for dynamic_direct_lidar_odometry
    </description>

    <maintainer email="lichtenfeld@sim.tu-darmstadt.de">Jonathan Lichtenfeld</maintainer>

    <license>MIT</license>

    <!-- dependencies -->
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>